--- a/styles.css
+++ b/styles.css
@@ -137,3 +137,27 @@ h2 {
 .form-control {
     background-color: #F1EDEF;
 }
+.menu-acessibilidade{
+    position: fixed;
+    top:2rem;
+    right:20px;
+    z-index: 1000;
+}
+
+.rotacao-botao{
+    tranform: rotate(-90deg);
+    transform-origem: right center;
+}
+
+.opcoes-acessibilidade{
+margin-top:10px;
+display: flex;
+flex-direction: column;
+}
+
+.opcoes-acessibilidade button{
+    margin-bottom: 5px;
+}
+.apresenta-lista{
+    display: none;
+}
